{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 30,
  "lineage": "e37b8931-8d75-a029-69e4-a55c7e435a02",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:809778421588:route-table/rtb-013894e1294a98646",
            "default_route_table_id": "rtb-013894e1294a98646",
            "id": "rtb-013894e1294a98646",
            "owner_id": "809778421588",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0513faa6dcd4b7ae0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0227bb85823551491",
            "association_id": "eipassoc-01eb2d78debcd9884",
            "domain": "vpc",
            "id": "eipalloc-0227bb85823551491",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-07f2bf50aeb233c27",
            "private_dns": "ip-12-0-1-32.ap-south-1.compute.internal",
            "private_ip": "12.0.1.32",
            "public_dns": "ec2-3-109-71-201.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.71.201",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:809778421588:internet-gateway/igw-02b805727e0201c7b",
            "id": "igw-02b805727e0201c7b",
            "owner_id": "809778421588",
            "tags": {
              "Name": "test-vpc-gw"
            },
            "tags_all": {
              "Name": "test-vpc-gw"
            },
            "vpc_id": "vpc-0513faa6dcd4b7ae0"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0227bb85823551491",
            "association_id": "eipassoc-01eb2d78debcd9884",
            "connectivity_type": "public",
            "id": "nat-04bfa4954467fd505",
            "network_interface_id": "eni-07f2bf50aeb233c27",
            "private_ip": "12.0.1.32",
            "public_ip": "3.109.71.201",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09cb06c3070dcbd6c",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.bar",
            "aws_internet_gateway.gw",
            "aws_subnet.test-vpc-public",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:809778421588:route-table/rtb-0ab15163e2a1490d7",
            "id": "rtb-0ab15163e2a1490d7",
            "owner_id": "809778421588",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04bfa4954467fd505",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0513faa6dcd4b7ae0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.example",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:809778421588:route-table/rtb-02bf0241d32cf6430",
            "id": "rtb-02bf0241d32cf6430",
            "owner_id": "809778421588",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02b805727e0201c7b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0513faa6dcd4b7ae0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026ef8affe32c171f",
            "route_table_id": "rtb-0ab15163e2a1490d7",
            "subnet_id": "subnet-04fa54f44e6eee090"
          },
          "dependencies": [
            "aws_nat_gateway.example",
            "aws_route_table.private",
            "aws_subnet.test-vpc-private",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a9fd785fbf10c9e",
            "route_table_id": "rtb-02bf0241d32cf6430",
            "subnet_id": "subnet-09cb06c3070dcbd6c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.test-vpc-public",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-vpc-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:809778421588:subnet/subnet-04fa54f44e6eee090",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "12.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fa54f44e6eee090",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "809778421588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-vpc-private"
            },
            "tags_all": {
              "Name": "test-vpc-private"
            },
            "vpc_id": "vpc-0513faa6dcd4b7ae0"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-vpc-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:809778421588:subnet/subnet-09cb06c3070dcbd6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "12.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cb06c3070dcbd6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "809778421588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-vpc-public"
            },
            "tags_all": {
              "Name": "test-vpc-public"
            },
            "vpc_id": "vpc-0513faa6dcd4b7ae0"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:809778421588:vpc/vpc-0513faa6dcd4b7ae0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "12.0.0.0/16",
            "default_network_acl_id": "acl-0172f7cb3d5adb6b0",
            "default_route_table_id": "rtb-013894e1294a98646",
            "default_security_group_id": "sg-0079f07e4fc78d2bf",
            "dhcp_options_id": "dopt-0ff9ef518711b5953",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0513faa6dcd4b7ae0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-013894e1294a98646",
            "owner_id": "809778421588",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            }
          }
        }
      ]
    }
  ]
}